@@ -25,9 +25,9 @@ $T=array(
 	'changelang' => 'Sprache ändern:',
 	'expire' => 'Ungültige/abgelaufene Sitzung',
 	'kicked' => 'Rausgeschmissen!',
-	'invalnick' => 'Ungültiger Nickname (Maximal %d Zeichen, keine Sonderzeichen erlaubt)',
-	'invalpass' => 'Ungültiges Passwort (Mindestens %d Zeichen)',
-	'noconfirm' => 'Passwordbestätigung stimmt nicht überein!',
+	'invalnick' => 'Ungültiger Nickname (Maximal %1$d Zeichen und muss dem regulären Ausdruck "%2$s" entsprechen)',
+	'invalpass' => 'Ungültiges Passwort (Mindestens %1$d Zeichen und muss dem regulären Ausdruck "%2$s" entsprechen)',
+	'noconfirm' => 'Passwortbestätigung stimmt nicht überein!',
 	'incorregex' => 'Ungültiger regulärer Ausdruck!',
 	'bottom' => 'Unten',
 	'top' => 'Oben',
@@ -282,7 +282,7 @@ $T=array(
 	'topic' => 'Thema',
 	'passreset' => 'Passwort zurücksetzen',
 	'cantresetpass' => 'Passwort kann nicht zurückgesetzt werden',
-	'succpassreset' => 'Password erfolgreich zurückgesetzt',
+	'succpassreset' => 'Passwort erfolgreich zurückgesetzt',
 	'entermsg' => '%s hat den Chat betreten.',
 	'exitmsg' => '%s hat den Chat verlassen.',
 	'memregmsg' => '%s ist jetzt ein registriertes Mitglied.',
@@ -342,8 +342,12 @@ $T=array(
 	'inboxmsgs' => '%d Nachrichten im Posteingang lesen',
 	'offline' => '(offline)',
 	'deleteacc' => 'Konto löschen',
+	'eninnone' => 'Für niemanden',
 	'eninall' => 'Für jeden',
 	'eninmem' => 'Nur für Mitglieder',
-	'eninstaff' => 'Nur für Moderatoren'
+	'eninstaff' => 'Nur für Moderatoren',
+	'eninadmin' => 'Nur für Administratoren',
+	'nickregex' => 'Nickname-Regex',
+	'passregex' => 'Passwort-Regex',
 );
 ?>
