@@ -25,8 +25,6 @@ $T=array(
 	'changelang' => 'Cambiar idioma:',
 	'expire' => 'La sesión es inválida o expiró',
 	'kicked' => '¡Te expulsaron!',
-	'invalnick' => 'Apodo incorrecto (%d caracteres como máximo, no se permiten caracteres especiales)',
-	'invalpass' => 'Contraseña inválida (como mínimo %d caracteres)',
 	'noconfirm' => '¡La contraseña y su confirmación no coinciden!',
 	'incorregex' => '¡Expresión regular incorrecta!',
 	'bottom' => 'Inicio',
