@@ -25,8 +25,6 @@ $T=array(
 	'changelang' => 'Changer la langue:',
 	'expire' => 'Session invalide / expirée',
 	'kicked' => 'Banni / éjecté!',
-	'invalnick' => 'pseudo valide (% de caractères maximum, pas de caractères spéciaux autorisés)',
-	'invalpass' => 'mot de passe invalide (au moins % caractères)',
 	'noconfirm' => 'Confirmation mot du passe ne correspond pas! ',
 	'incorregex' => 'Expression régulière incorrecte!',
 	'bottom' => 'Bas',
