@@ -25,8 +25,6 @@ $T=array(
 	'changelang' => 'Ubah bahasa:',
 	'expire' => 'Sesi salah/kadaluarsa',
 	'kicked' => 'Diusir!',
-	'invalnick' => 'Nama pengguna salah (maksimal %d karakter, karakter spesial tak diizinkan)',
-	'invalpass' => 'Kata sandi salah (minimal %d karakter)',
 	'noconfirm' => 'Konfirmasi kata sandi tidak cocok!',
 	'incorregex' => 'Regular expression salah!',
 	'bottom' => 'Bawah',
