@@ -25,8 +25,6 @@ $T=array(
 	'changelang' => 'Изменить язык:',
 	'expire' => 'Недействительная/с истекшим сроком сессия',
 	'kicked' => 'Забанен!',
-	'invalnick' => 'Недействительный ник (%d символов максимум, никакие специальные разрешенные символы)',
-	'invalpass' => 'Неверный пароль (по крайней мере %d символов)',
 	'noconfirm' => 'Подтверждение пароля не совпадает!',
 	'incorregex' => 'Неправильное регулярное выражение!',
 	'bottom' => 'Вниз',
