@@ -4,6 +4,7 @@ Allow ignoring incognito chatters
 Prevent posting the same message twice, if no other message was posted in-between
 Instruct browser not to send referrer.
 Enable image embedding without cookies as there is no more risk of session leakage.
+Allow configuring password and nickname regex
 
 Version 1.20.6 - Jul. 23, 2016
 Simplify ignore logic + disallow ignoring chatters with higher status
